--- a/src/css/instructions_style.css
+++ b/src/css/instructions_style.css
@@ -1,7 +1,7 @@
 .settings-button{
     position: absolute;
-    top: 35px;
-    right: 35px;
+    top: 25px;
+    right: 30px;
     padding: 7px 5px 5px;
     background: #ededed;
     border-radius: 5px;
@@ -78,6 +78,7 @@
 .body-settings_wrapper {
     text-align: center;
     padding: 40px 40px 40px 40px;
+    overflow-x: hidden;
 }
 
 .word-example{
@@ -108,4 +109,14 @@
     padding: 10px 15px;
     background: #edf0f5;
     border-radius: 10px;
+}
+
+
+/*MOBILE MENU SETTEINGS*/
+@media (max-width: 767px) {
+    .settings_info {
+        width: 100%;
+        overflow-y: scroll;
+    }
+
 }
